--- a/requirements.txt
+++ b/requirements.txt
@@ -4,20 +4,38 @@ aiosignal==1.2.0
 anyio==3.5.0
 async-timeout==4.0.2
 attrs==21.4.0
+blinker==1.4
 charset-normalizer==2.0.12
 choicelib==0.1.5
+click==8.1.3
+Flask==2.1.2
+Flask-DebugToolbar==0.13.1
 frozenlist==1.3.0
 idna==3.3
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
 multidict==6.0.2
 mysql-connector-python==8.0.28
+numpy==1.22.3
+pandas==1.4.2
+prettytable==3.2.0
 protobuf==3.20.0
 psycopg2==2.9.3
 pydantic==1.9.0
+python-dateutil==2.8.2
+pytz==2022.1
+six==1.16.0
 sniffio==1.2.0
 tabulate==0.8.9
+texttable==1.6.4
 typing-extensions==4.1.1
 vbml==1.1.post1
 vkbottle==4.2.2
 vkbottle-types==5.131.146.1
 watchgod==0.8.2
+wcwidth==0.2.5
+Werkzeug==2.1.2
 yarl==1.7.2
+zipp==3.8.0
